syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message ResetPasswordRequest {
    string username = 1;
    string password = 2;
}

message ResetPasswordResponse {
    User user = 1; 
}